fixed a minor contrast issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -690,7 +690,7 @@ table td {
 /*********************** delete modal **************************/ /*********************** delete modal **************************/
 /* User List */
 .deleted-user{
-    box-shadow: 0px 0px 10px 4px var(--deleted-item-color) inset;
+    box-shadow: 0 0 10px 4px var(--deleted-item-color) inset;
     text-decoration: line-through;
 }
 
@@ -1214,6 +1214,7 @@ a {
     background-color: var(--status-rejected);
     border-radius: 4px;
     opacity: 0;
+    color: white;
 
     transition: top .5s ease-in-out, opacity .5s ease-in-out;
 }
